# Delay

./: .clang-format  .clang_format  .gitignore  DelayConfig.h  PremakePlugin.lua  README.md  additional_artifacts.json  bundle_template.json  cf.py  cf.sh
.github/workflows/: tests.yml
FactoryAssets/: Manifest.xml
SoundEnginePlugin/: ChorusFlanger.cpp  ChorusFlanger.h  ChourusFlanger.cpp  CircularBuffer.cpp  CircularBuffer.h  Delay.cpp  Delay.h  DelayFX.cpp  DelayFX.h  DelayFXFactory.h  DelayFXParams.cpp  DelayFXParams.h  DelayFXShared.cpp  Delayline.cpp  Delayline.h  Helpers.h  LFO.cpp  LFO.h  SimdOps.h
Tests/: CMakeLists.txt  README.md  SETUP_GUIDE.md  build_and_test.sh  test_circular_buffer.cpp  test_delayline.cpp  test_helpers.cpp  test_lfo.cpp  test_simd.cpp
WwisePlugin/: Delay.def  Delay.xml  DelayPlugin.cpp  DelayPlugin.h
WwisePlugin/Win32/: DelayPluginGUI.cpp  DelayPluginGUI.h
